# Case139536

./: pyproject.toml  whitesource.config
