[tool.poetry]
name = "crane_value"
version = "0.1.0"
description = "Automated property tax appeals generation."
authors = ["David Berthiaume <david.berthiaume@avalara.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.144"
botocore = "^1.34.144"
numpy = "^2.0.0"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"
SQLAlchemy = "^2.0.31"
polars = "^1.1.0"
coverage = "^7.6.0"
pytest = "^8.2.2"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
